# Lightmapper

./: .gitmodules  CMakeLists.txt  README.md  Test0.hpp  Test1.hpp  main.cpp
core/: Object3D.h
lights/: DirectionalLight.cpp  DirectionalLight.h  DirectionalLightShadow.cpp  DirectionalLightShadow.h  Lights.h
loaders/: GLTFLoader.cpp  GLTFLoader.h
materials/: MeshStandardMaterial.h
models/: GLTFModel.cpp  GLTFModel.h  GeometryCreator.cpp  ModelComponents.cpp  ModelComponents.h  SimpleModel.cpp  SimpleModel.h
renderers/: BVHRenderer.cpp  BVHRenderer.h  GLRenderTarget.cpp  GLRenderTarget.h  GLRenderer.cpp  GLRenderer.h  GLUtils.cpp  GLUtils.h
renderers/bvh_routines/: BVHDepthOnly.cpp  BVHDepthOnly.h  BVHRoutine.cpp  BVHRoutine.h  CompHemisphere.cpp  CompHemisphere.h  CompSkyBox.cpp  CompSkyBox.h
renderers/routines/: RasterizeAtlas.cpp  RasterizeAtlas.h  StandardRoutine.cpp  StandardRoutine.h
scenes/: Scene.cpp  Scene.h
